# breezeai-cog

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  breezeai-cog-deploy.yaml  pyproject.toml
.github/workflows/: ci.yml  ci.yml.disabled
docs/: ADDING_A_PARSER.md  DEVELOPER_GUIDE.md  USER_GUIDE.md  parser-reference.md
skills/extend-capture/: SKILL.md
src/breezeai_cog/: __init__.py  __main__.py  _version.py  cli.py  config.py  errors.py  logging.py
src/breezeai_cog/analyzers/: __init__.py  es.py  sql.py
src/breezeai_cog/core/: __init__.py  default_ignores.txt  executor.py  ignore.py  pipeline.py  registry.py  scanner.py
src/breezeai_cog/emit/: __init__.py  gzip_stream.py  ids.py  ndjson.py  s3.py  sinks.py
src/breezeai_cog/parsers/: __init__.py  base.py  callresolve.py  index_common.py  statements_common.py  treesitter.py
src/breezeai_cog/parsers/config/: __init__.py  extractors.py  parser.py
src/breezeai_cog/parsers/csharp/: __init__.py  classes.py  functions.py  ignore.txt  imports.py  include.txt  lambda_events.py  mappings.py  parser.py  statements.py
src/breezeai_cog/parsers/csharp_aspnet/: __init__.py  parser.py  routes.py
src/breezeai_cog/parsers/csharp_graphql/: __init__.py  parser.py  routes.py
src/breezeai_cog/parsers/csharp_wcf/: __init__.py  parser.py  routes.py
src/breezeai_cog/parsers/csharp_webforms/: __init__.py  mounts.py  navigation.py  parser.py  routes.py
src/breezeai_cog/parsers/detection/: __init__.py  api_calls.py  db_queries.py  queries.py  sdk_calls.py
src/breezeai_cog/parsers/dotnet_servicehost/: __init__.py  parser.py  routes.py
src/breezeai_cog/parsers/groovy/: __init__.py  classes.py  functions.py  ignore.txt  imports.py  include.txt  mappings.py  parser.py  statements.py
src/breezeai_cog/parsers/java/: __init__.py  classes.py  functions.py  ignore.txt  imports.py  include.txt  mappings.py  parser.py  statements.py
src/breezeai_cog/parsers/java_jaxrs/: __init__.py  parser.py  routes.py
src/breezeai_cog/parsers/java_springboot/: __init__.py  functional_routes.py  parser.py  queries.py  routes.py
src/breezeai_cog/parsers/java_vertx/: __init__.py  events.py  parser.py
src/breezeai_cog/parsers/python/: __init__.py  classes.py  functions.py  ignore.txt  imports.py  include.txt  mappings.py  parser.py  statements.py
src/breezeai_cog/parsers/python_fastapi/: __init__.py  parser.py  routes.py
src/breezeai_cog/parsers/svc/: __init__.py  parser.py  routes.py
src/breezeai_cog/parsers/typescript/: __init__.py  aws_events.py  classes.py  functions.py  ignore.txt  imports.py  include.txt  mappings.py  parser.py  statements.py
src/breezeai_cog/parsers/typescript_angular/: __init__.py  parser.py  routes.py
src/breezeai_cog/parsers/typescript_express/: __init__.py  parser.py  routes.py
src/breezeai_cog/parsers/typescript_graphql/: __init__.py  parser.py  routes.py
src/breezeai_cog/parsers/typescript_loopback/: __init__.py  parser.py  routes.py
src/breezeai_cog/parsers/typescript_nbs_graphql/: __init__.py  parser.py  routes.py
src/breezeai_cog/parsers/typescript_nestjs/: __init__.py  parser.py  routes.py
src/breezeai_cog/parsers/typescript_nextjs/: __init__.py  parser.py  routes.py
src/breezeai_cog/parsers/typescript_react/: __init__.py  parser.py  routes.py
src/breezeai_cog/parsers/vb/: __init__.py  classes.py  functions.py  ignore.txt  imports.py  include.txt  mappings.py  parser.py  statements.py
src/breezeai_cog/parsers/vb_aspnet/: __init__.py  parser.py
src/breezeai_cog/schemas/: __init__.py  capture.py  code-capture.schema.json  enums.py  version.py
src/breezeai_cog/server/: __init__.py  app.py  deps.py  errors.py  git.py  routes.py
src/breezeai_cog/services/: __init__.py  analysis.py  diff.py  inprocess.py  notify.py  upload.py
src/breezeai_cog/utils/: __init__.py  loc.py  paths.py  source_cache.py  text.py
tests/unit/: test_analyzer_sql.py  test_angular_parser.py  test_aspnet_parser.py  test_aws_events.py  test_build_index.py  test_call_resolution.py  test_cli.py  test_config.py  test_config_parser.py  test_csharp_graphql_parser.py  test_csharp_lambda_events.py  test_csharp_parser.py  test_detection.py  test_emit.py  test_executor.py  test_express_parser.py  test_fastapi_parser.py  test_graphql_parser.py  test_groovy_parser.py  test_ignore.py  test_java_parser.py  test_jaxrs_parser.py  test_logging.py  test_loopback_parser.py  test_nbs_graphql_parser.py  test_nestjs_parser.py  test_nextjs_parser.py  test_pipeline.py  test_python_parser.py  test_react_parser.py  test_registry.py  test_scanner.py  test_schema.py  test_schema_drift.py  test_sdk_calls.py  test_server_analyze.py  test_server_diff.py  test_server_es.py  test_server_sql.py  test_servicehost_parser.py  (+9 more)
