[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "breezeai-cog"
version = "0.0.0"
description = "Python code-ontology generator — parses source repositories into the capture NDJSON contract (Part C)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Breeze AI" }]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "typer>=0.12",
  "structlog>=24.1",
  "pathspec>=0.12",
  "rich>=13.7",
  # Upper bound: 0.26 removed Parser.timeout_micros (our only bytes-path parse
  # timeout — progress_callback is ignored for bytestring input on 0.25/0.26 alike),
  # so the code requires the <0.26 API. Revisit if migrating to the chunked-callback
  # source form. Lower bound 0.24 is where timeout_micros stabilized.
  "tree-sitter>=0.24,<0.26",
  "tree-sitter-language-pack>=0.2",
  "pyyaml>=6.0",
  # --upload (services/upload.py) and notify (services/notify.py) are first-class
  # CLI features, so their HTTP client is a core dependency — not an opt-in extra.
  "httpx>=0.27",
]

# httpx is a core dependency (see [project.dependencies]), so CLI upload works with
# a base install — no extra needed. Extras below add only what they uniquely require.
[project.optional-dependencies]
server = [
  "fastapi>=0.110", "uvicorn>=0.29", "gitpython>=3.1",
  "python-multipart>=0.0.9", "boto3>=1.34", "sqlglot>=23",
]
all = [
  "boto3>=1.34",
  "fastapi>=0.110", "uvicorn>=0.29", "gitpython>=3.1",
  "python-multipart>=0.0.9", "sqlglot>=23",
]

# Dev tooling (PEP 735). Installed by `uv sync` (the `dev` group is on by default),
# unlike optional-dependencies extras which require `uv sync --extra <name>`.
[dependency-groups]
dev = ["pytest>=8", "jsonschema>=4.21", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
breezeai-cog = "breezeai_cog.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/breezeai_cog"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
packages = ["breezeai_cog"]
mypy_path = "src"
strict = true
